RESOLVED FIXED221736
[iOS] Some checkboxes and radio buttons are clipped on top
https://bugs.webkit.org/show_bug.cgi?id=221736
Summary [iOS] Some checkboxes and radio buttons are clipped on top
Aditya Keerthi
Reported 2021-02-10 19:40:33 PST
...
Attachments
Patch (17.19 KB, patch)
2021-02-10 19:43 PST, Aditya Keerthi
no flags
Patch for landing (17.21 KB, patch)
2021-02-10 20:29 PST, Aditya Keerthi
no flags
Patch (17.17 KB, patch)
2021-02-11 08:03 PST, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-02-10 19:40:53 PST
Aditya Keerthi
Comment 2 2021-02-10 19:43:23 PST
Simon Fraser (smfr)
Comment 3 2021-02-10 20:02:42 PST
Comment on attachment 419938 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=419938&action=review > Source/WebCore/rendering/RenderTheme.h:104 > + virtual LayoutRect adjustedPaintRect(const RenderBox&, const LayoutRect& paintRect) { return paintRect; } This function can be const.
Aditya Keerthi
Comment 4 2021-02-10 20:29:02 PST
Created attachment 419942 [details] Patch for landing
Aditya Keerthi
Comment 5 2021-02-10 20:29:52 PST
(In reply to Simon Fraser (smfr) from comment #3) > Comment on attachment 419938 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=419938&action=review > > > Source/WebCore/rendering/RenderTheme.h:104 > > + virtual LayoutRect adjustedPaintRect(const RenderBox&, const LayoutRect& paintRect) { return paintRect; } > > This function can be const. Done. Thanks for the review!
Aditya Keerthi
Comment 6 2021-02-11 08:03:18 PST
Aditya Keerthi
Comment 7 2021-02-11 08:04:52 PST
Added an is<RenderBox> check in RenderElement, to fix the crashing test.
EWS
Comment 8 2021-02-11 12:05:08 PST
commit-queue failed to commit attachment 419988 [details] to WebKit repository. To retry, please set cq+ flag again.
EWS
Comment 9 2021-02-11 13:57:42 PST
Committed r272749: <https://commits.webkit.org/r272749> All reviewed patches have been landed. Closing bug and clearing flags on attachment 419988 [details].
Note You need to log in before you can comment on or make changes to this bug.