[iOS] Some checkboxes and radio buttons are clipped on top https://bugs.webkit.org/show_bug.cgi?id=221736 <rdar://problem/73956812>

Reviewed by Simon Fraser.

Source/WebCore:

The clipping occurs due to integral rounding of the paint rect in
both RenderBox::paintBoxDecorations, as well as using the integral
rect in RenderTheme::paint. To fix, use FloatRect and the device
pixel snapped rect when painting these elements.

Tests: fast/forms/ios/form-control-refresh/checkbox/subpixel-clipping.html
       fast/forms/ios/form-control-refresh/radio/subpixel-clipping.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::paintBoxDecorations):

Moved into RenderTheme to avoid duplication.

* rendering/RenderElement.cpp:
(WebCore::RenderElement::paintOutline):

Moved into RenderTheme to avoid duplication.

* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::paint):

Use the device pixel snapped rect when painting checkboxes and radio
buttons.

* rendering/RenderTheme.h:
(WebCore::RenderTheme::adjustedPaintRect):

On most platforms, no adjustment is performed.

(WebCore::RenderTheme::paintCheckbox):
(WebCore::RenderTheme::paintRadio):
* rendering/RenderThemeIOS.h:
* rendering/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::adjustedPaintRect):

On iOS, radio buttons and checkboxes always have a square painting
rect. Updated to use FloatRect, rather than IntRect, to avoid
clipping.

(WebCore::RenderThemeIOS::paintCheckbox):
(WebCore::RenderThemeIOS::paintRadio):
* rendering/RenderThemeWin.h:

LayoutTests:

Added reference mismatch tests to verify that the clipping no longer
occurs. The tests work by drawing an overlay smaller than the actual
size of the checkbox/radio input. If the input is clipped, only the
overlay will be visible, matching the "-expected-mismatch.html".
However, if the input is drawn correctly, the overlay will not cover
the entire input, and a mismatch will occur.

* fast/forms/ios/form-control-refresh/checkbox/subpixel-clipping-expected-mismatch.html: Added.
* fast/forms/ios/form-control-refresh/checkbox/subpixel-clipping.html: Added.
* fast/forms/ios/form-control-refresh/radio/subpixel-clipping-expected-mismatch.html: Added.
* fast/forms/ios/form-control-refresh/radio/subpixel-clipping.html: Added.


Canonical link: https://commits.webkit.org/233989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272749 268f45cc-cd09-0410-ab3c-d52691b4dbfc